# AGHackathon

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_backend.py
alembic/: env.py
alembic/versions/: 5720e6e42c6a_initial_schema.py  a1b2c3d4e5f6_add_truck_type_and_perishability.py
app/: config.py  database.py  dependencies.py  main.py
app/models/: __init__.py  audit_log.py  bid.py  buyer.py  escrow.py  farmer.py  logistics_assignment.py  middleman.py  order.py
app/routers/: auth.py  bids.py  buyers.py  farmers.py  logistics.py  middlemen.py  orders.py  verify.py  webhooks.py  ws.py
app/schemas/: __init__.py  bid.py  buyer.py  common.py  escrow.py  farmer.py  middleman.py  order.py
app/seed/: demo_data.py
app/seed/geojson/: demo_buyers.geojson  demo_farms.geojson  demo_trucks.geojson
app/services/: escrow_service.py  external_api_service.py  grading_service.py  notification_service.py  order_fsm.py  produce_intelligence.py  spatial_service.py
app/tasks/: timeout_monitor.py
app/ws/: manager.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Badge.tsx  Button.tsx  InputField.tsx  LoginForm.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: RoleSelection.tsx
frontend/src/pages/buyer/: BidForm.tsx  BrowseListings.tsx  BuyerDashboard.tsx  BuyerLogin.tsx
frontend/src/pages/farmer/: FarmerDashboard.tsx  FarmerLogin.tsx  (+1 more)
frontend/src/services/: api.ts
tests/: conftest.py
(+3 files in other folders)
