[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agrimatch"
version = "0.1.0"
description = "Three-sided agricultural marketplace with AI crop grading and logistics matching"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "geoalchemy2>=0.15.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.2,<4.0.0",
    "stripe>=9.9.0",
    "opencv-python-headless>=4.9.0.80",
    "numpy>=1.26.0",
    "apscheduler>=3.10.4",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",
    # AI crop grading via Google Cloud Vision API
    "google-cloud-vision>=3.7.0",
    # Firebase Admin SDK for FCM push notifications
    "firebase-admin>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
